--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "promisify-any": "^2.0.1"
   },
   "devDependencies": {
+    "@compwright/oauth2-server": "^3.0.3",
     "eslint": "^5.3.0",
     "lodash": "^4.17.10",
     "mocha": "^5.2.0"
